--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.9",
     "@types/moment": "^2.13.0",
+    "@types/ms": "^0.7.31",
     "@types/numeral": "^0.0.28",
     "@types/react": "^16.9.44",
     "@types/styled-components": "^5.1.2",
