--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@cognite/sdk": "^3.0.0",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "@rollup/plugin-replace": "^2.3.3",
     "@storybook/addon-docs": "^5.3.19",
     "@storybook/react": "^5.3.19",
@@ -64,5 +66,10 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "styled-components": "^5.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
