--- a/.github/workflows/build_n_test.yml
+++ b/.github/workflows/build_n_test.yml
@@ -2,17 +2,11 @@ name: Lint & Build & Test & Deploy
 
 on:
   pull_request:
+    branches: [ master ]
   push:
     branches: [ master ]
 
 jobs:
-  commitlint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: wagoid/commitlint-github-action@v2
   build-and-deploy:
     runs-on: ubuntu-latest
 
@@ -22,6 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Check commit message
+        uses: wagoid/commitlint-github-action@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
