--- a/.github/workflows/build_n_test.yml
+++ b/.github/workflows/build_n_test.yml
@@ -7,6 +7,15 @@ on:
     branches: [ master ]
 
 jobs:
+  commitlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Check commit message
+        uses: wagoid/commitlint-github-action@v2
+
   build-and-deploy:
     runs-on: ubuntu-latest
 
@@ -15,14 +24,10 @@ jobs:
         node-version: [10.x]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Check commit message
-        uses: wagoid/commitlint-github-action@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
       - run: npm install -g codecov @cognite/preview-cli@0.0.6
 
       - name: Get yarn cache directory path
