--- a/.github/workflows/build_n_test.yml
+++ b/.github/workflows/build_n_test.yml
@@ -1,14 +1,22 @@
 name: Lint & Build & Test & Deploy
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
+    branches: [ master ]
+  push:
     branches: [ master ]
 
 jobs:
-  build-and-deploy:
+  commitlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Check commit message
+        uses: wagoid/commitlint-github-action@v2
 
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     strategy:
@@ -21,7 +29,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
       - run: npm install -g codecov @cognite/preview-cli@0.0.6
 
       - name: Get yarn cache directory path
@@ -49,3 +56,13 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./storybook-static
+
+      - name: Check if version has been updated
+        id: version_check
+        uses: EndBug/version-check@v1
+
+      - name: Deploy 🚀
+        if: success() && github.event_name == 'push' && github.ref == 'refs/heads/master' && steps.version_check.outputs.changed == 'true'
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+        run: npm publish
