--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@cognite/sdk": "^3.0.0",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "@rollup/plugin-replace": "^2.3.3",
     "@storybook/addon-docs": "^5.3.19",
     "@storybook/react": "^5.3.19",
@@ -47,6 +49,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.5",
+    "husky": "^4.2.5",
     "jest": "^26.2.2",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
@@ -64,5 +67,10 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "styled-components": "^5.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
