--- a/.github/workflows/build_n_test.yml
+++ b/.github/workflows/build_n_test.yml
@@ -15,6 +15,8 @@ jobs:
           fetch-depth: 0
       - name: Check commit message
         uses: wagoid/commitlint-github-action@v2
+        with:
+          diff-search: true
 
   build-and-deploy:
     runs-on: ubuntu-latest
