--- a/.github/workflows/build_n_test.yml
+++ b/.github/workflows/build_n_test.yml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@cognite'
       - run: npm install -g codecov @cognite/preview-cli@0.0.6
 
       - name: Get yarn cache directory path
@@ -65,6 +67,6 @@ jobs:
 
       - name: Deploy 🚀
         if: success() && github.event_name == 'push' && github.ref == 'refs/heads/master' && steps.version_check.outputs.changed == 'true'
+        run: yarn publish --access public
         env:
-          NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
-        run: npm publish
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
