--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cognite/react-timeseries-chart",
-  "version": "0.3.0",
+  "version": "1.0.0-alpha",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "cognitedata/react-timeseries-chart",
